# BRIEF_CI_CD

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  COMPARATIF_OUTILS.md  Dockerfile  PROBLEMES_DETECTES.md  README.md  VEUILLE_CICD.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml  docker.yml  release.yml  sync-develop.yml
app/: database.py  main.py
app/models/: item.py
app/routes/: items.py
tests/: test_imports.py
