[project]
name = "training-ci-cd-semantic-release"
version = "0.1.0"
description = "CRUD API with PostgreSQL for managing items"
requires-python = ">=3.13"

# ============================================================================
# DEPENDENCIES
# ============================================================================
dependencies = [
    "fastapi[standard]>=0.121.0",
    "psycopg2-binary>=2.9.11",
    "python-semantic-release>=10.5.2",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "diagrams>=0.24.4",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.6",
    "bandit>=1.7.10",
    "safety>=3.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]


